# kafka-consumer

./: Cargo.toml
src/: main.rs
